improved contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,23 @@
 #contact {
     width: 50%;
     margin: .5em auto;
+    text-align: center;
+}
+
+#sendbtn {
+    padding: 1em;
+    border-radius: .5em;
+    background-color: var(--dark-lighter);
+    color: var(--text);
+    border: 1px solid var(--text);
+    cursor: pointer;
+    margin-top: 2em;
+}
+
+#sendbtn:hover {
+    color: var(--primary);
+    border-color: var(--primary);
+    background-color: var(--dark-lightest);
 }
 
 .contactInput {
