--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,9 @@
+#profilepic {
+    border-radius: 1em;
+    box-shadow: 3px 3px 0px black;
+    border: 1px solid white;
+}
+
 .scrollshow {
     color: white;
     height: 100%;
@@ -23,7 +29,7 @@
 }
 
 .slide.lblue{
-    background-color: #8abae7;
+    background-color: #7dadda;
 }
 
 .scrollshow .leftcol {
